--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 ﻿{
-  "framework": "vite",
-  "buildCommand": "cd client && npm install && npm run build",
+  "version": 2,
+  "installCommand": "npm --prefix client install",
+  "buildCommand": "npm --prefix client run build",
   "outputDirectory": "client/dist",
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "framework": "vite"
 }
