--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
         "express": "^4.22.1",
         "jsonwebtoken": "^9.0.3",
         "mongoose": "^8.21.0",
-        "nodemailer": "^7.0.12"
+        "nodemailer": "^7.0.12",
+        "socket.io": "^4.8.3",
+        "twilio": "^5.11.2"
     },
     "devDependencies": {
         "nodemon": "^3.1.11"
